refactoring products service
