# product-api/handlers/products.go
@@ -17,9 +17,8 @@ package handlers
 import (
 	"fmt"
 	"github.com/gorilla/mux"
-	protos "github.com/nanmenkaimak/currency/protos/currency"
+	"github.com/hashicorp/go-hclog"
 	"github.com/nanmenkaimak/product-api/data"
-	"log"
 	"net/http"
 	"strconv"
 )
@@ -29,14 +28,14 @@ type KeyProduct struct{}
 
 // Products handler for getting and updating products
 type Products struct {
-	l  *log.Logger
-	v  *data.Validation
-	cc protos.CurrencyClient
+	l         hclog.Logger
+	v         *data.Validation
+	productDB *data.ProductsDB
 }
 
 // NewProducts returns a new products handler with the given logger
-func NewProducts(l *log.Logger, v *data.Validation, cc protos.CurrencyClient) *Products {
-	return &Products{l, v, cc}
+func NewProducts(l hclog.Logger, v *data.Validation, pdb *data.ProductsDB) *Products {
+	return &Products{l, v, pdb}
 }
 
 // ErrInvalidProductPath is an error message when the product path is not valid
