# product-api/swagger.yaml
@@ -11,12 +11,12 @@ definitions:
         type: string
         x-go-name: Message
     type: object
-    x-go-package: github.com/nanmenkaimak/coffeshop/sdk/models
+    x-go-package: github.com/nanmenkaimak/product-api/sdk/models
   Product:
-    description: Product defines the structure for an API product
+    description: Product Product defines the structure for an API product
     properties:
       description:
-        description: the description for this poduct
+        description: the description for this product
         maxLength: 10000
         type: string
         x-go-name: Description
@@ -27,7 +27,7 @@ definitions:
         type: integer
         x-go-name: ID
       name:
-        description: the name for this poduct
+        description: the name for this product
         maxLength: 255
         type: string
         x-go-name: Name
@@ -47,7 +47,7 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: github.com/nanmenkaimak/coffeshop/data
+    x-go-package: github.com/nanmenkaimak/product-api/sdk/models
   ValidationError:
     description: ValidationError ValidationError is a collection of validation error
       messages
@@ -59,10 +59,10 @@ definitions:
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: github.com/nanmenkaimak/coffeshop/sdk/models
+    x-go-package: github.com/nanmenkaimak/product-api/sdk/models
 info:
   description: |-
-    Documentation for Product API
+    # Documentation for Product API
 
     Schemas: http
   title: for Product API
@@ -72,6 +72,13 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -144,6 +151,12 @@ paths:
       description: Return a list of products from the database
       operationId: listSingleProduct
       parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       - description: The id of the product for which the operation relates
         format: int64
         in: path
